--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito-sans": "^0.2.2",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "expo": "~47.0.9",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "typescript": "^4.6.3",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6"
+    "react-native-svg": "13.4.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "typescript": "^4.6.3"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "styled-components": "^5"
+  }
 }
