--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.2",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "intl": "^1.2.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "styled-components": "^5.3.0"
   },
@@ -25,7 +28,10 @@
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.0",
     "react-native-svg-transformer": "^1.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "@types/intl": "^1.2.0",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6"
   },
   "private": true,
   "resolutions": {
