--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "date-fns": "^2.29.3", 
     "expo": "~47.0.9",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "intl": "^1.2.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
@@ -25,13 +28,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/intl": "^1.2.0",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.0",
     "react-native-svg-transformer": "^1.0.0",
-    "typescript": "^4.6.3",
-    "@types/intl": "^1.2.0",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6"
+    "typescript": "^4.6.3"
   },
   "private": true,
   "resolutions": {
